kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ad7347455938c42efbed290b28f09a3b-1413899274.us-east-2.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend-service
            port:
              number: 5173
